Changelog
=========

6.8-dev - (unreleased)
----------------------
* Feature: Added PDF Back Cover support
  [voineali refs #19882]

6.7 - (2014-03-10)
------------------
* Bug fix: Do not add table of content on PDF cover
  [voineali refs #18630]
* Change: pass a doctype to the header pdf template in order to workaround
  wkhtmltopdf 0.12 issue which fails to insert the header without it
  [ichim-david refs #18550]

6.6 - (2014-01-21)
------------------
* Bug fix: removed wrongly added blockquotes within README.rst
  [ichim-david refs #18064]
* Feature: adding Sphinx-generated documentation in Page Template format
  [batradav refs #9502]

6.5 - (2013-10-22)
------------------
* Bug fix: return first page on pdf to image conversion; refactor cover
  [simiamih refs #16799]

6.4 - (2013-10-07)
------------------
* Feature: Added utility method to truncate text by the number of characters
  without cutting words at the end
  [voineali refs #16946]
* Feature: Added utility method to convert relative urls to absolute urls
  [voineali refs #16946]

6.3 - (2013-10-04)
------------------
* Bug fix: Fixed PDF cover asking for credentials for non-published documents
  [voineali refs #14904]
* Feature: Added custom PDF html-header and html-footer in order to easily
  customize them (just override @@pdf.header and @@pdf.footer for your contexts)
  [voineali refs #16802]

6.2 - (2013-09-23)
------------------
* Feature: Export HTML to PDF with custom cover (requires collective.sendaspdf)
  [voineali refs #14904]

6.1 - (2013-02-25)
------------------
* Feature: added information for contributors
  [ciobabog refs #13892]
* Add Windows support for close_fds parameter of Popen
  [erral #1]

6.0 - (2012-10-08)
------------------
* Fixed dependencies, cleanup and make the package run on a clean Zope
  [ghicaale #5426]

1.1 - (2012-06-12)
------------------
* Added watermark utility
  [szabozo0]

1.0 - (2012-03-05)
------------------
* Initial release
  [voineali]
