@@ -13,7 +13,16 @@
     permission="zope2.View"
     />
 
-<browser:page
+  <browser:page
+    zcml:condition="installed collective.sendaspdf"
+    for="zope.interface.Interface"
+    name="pdf.disclaimer"
+    class=".app.pdfview.Disclaimer"
+    template="zpt/pdf.disclaimer.pt"
+    permission="zope2.View"
+    />
+
+  <browser:page
     zcml:condition="installed collective.sendaspdf"
     for="zope.interface.Interface"
     name="pdf.cover.back"
